fix auto retransmit

--- a/keyboard/split_keyboard/wireless-slave/Makefile
+++ b/keyboard/split_keyboard/wireless-slave/Makefile
@@ -72,11 +72,11 @@ build-right: OPT_DEFS += -DDEVICE_ID=1
 build-right: hex
 
 program-left: build-left
-program-left: program-slave
+program-left: program-slave program-eeprom
 # program-left: lock
 
 program-right: build-right
-program-right: program-slave
+program-right: program-slave program-eeprom
 # program-right: lock
 
 uno:
@@ -101,6 +101,9 @@ lock:
 
 program-slave:
 	$(AVRDUDE_CMD) -U flash:w:$(TARGET).hex:i
-	sleep 2
+	sleep 3
+	$(AVRDUDE_CMD) -U eeprom:w:$(EEPROM_FILE):i
+
+program-eeprom:
 	$(AVRDUDE_CMD) -U eeprom:w:$(EEPROM_FILE):i
 
